--- a/style.css
+++ b/style.css
@@ -108,7 +108,7 @@ body{
 	width: calc(100% - 225px);
 	justify-content: center;
 	scroll-snap-align: center;
-	transition: all 0.9s ease; 
+	transition: all 0.9s ease;
     scroll-snap-stop: center;
 }
 
@@ -130,20 +130,20 @@ body{
 .pan1-front {
 	position: absolute;
 	z-index: 2;
-	max-width: 400px;
-	max-height: 400px;
+	max-width: 30%;
+	max-height: 38%;
 	top: calc(40%);
 	left: calc(23%);
 	transition: transform 0.9s ease;
 }
 
 #click {
-	position:  absolute; 
+	position:  absolute;
 	z-index: 2;
-	max-width: 100px;
-	max-height: 100px;
-	top: calc(70%);
-	left: calc(35%);
+	max-width: 8%;
+	max-height: 10%;
+	top: 66%;
+	left: 34%;
 }
 .img1{
 	flex: 1;
@@ -307,8 +307,8 @@ body{
   position: absolute;
   top: calc(100% - 250px);
   left: calc(100% - 650px);
-  width: 30px;
-  height: 50px;
+  width: 2.5%;
+  height: 7%;
   border: 2px solid black;
   border-radius: 50px;
   box-sizing: border-box;
@@ -317,10 +317,10 @@ body{
 #pan0 .subpanel a span::before {
   position: absolute;
   top: 10px;
-  left: 50%;
+  left: 54%;
   content: '';
-  width: 6px;
-  height: 6px;
+  width: 12%;
+  height: 10%;
   margin-left: -3px;
   background-color: black;
   border-radius: 100%;
@@ -374,17 +374,21 @@ body.active .header, body.active .main, body.active .panel{ /*if sidebar is not 
 }
 
 body.active .pan1-front{
-	top: 45%;
-	left: 25%;
+	top: 43%;
+	left: 23%;
 }
 body.active #pan0 .subpanel a, body.active #pan0 .subpanel a span{
-	top: calc(100% - 120px);
-  	left: calc(100% - 760px);
+	top: 80%;
+  left: 50%;
 }
 
 body.active .pan3-front{
 	top: 50px;
-	left : -50px;
+	left : -70px;
+}
+body.active #click{
+	top: 68%;
+	left: 34%;
 }
 
 #pan6 {
