--- a/style.css
+++ b/style.css
@@ -305,8 +305,8 @@ body{
 }
 #pan0 .subpanel a span{
   position: absolute;
-  top: calc(100% - 250px);
-  left: calc(100% - 650px);
+  top: 80%;
+  left: 55%;
   width: 2.5%;
   height: 7%;
   border: 2px solid black;
@@ -316,8 +316,8 @@ body{
 }
 #pan0 .subpanel a span::before {
   position: absolute;
-  top: 10px;
-  left: 54%;
+  top: 40%;
+  left: 55%;
   content: '';
   width: 12%;
   height: 10%;
